fix(website): constrain mobile menu width + tweak layout spacing

--- a/website/builder/css/docs.css
+++ b/website/builder/css/docs.css
@@ -171,7 +171,6 @@ blockquote {
   overflow: hidden;
   line-height: 26px;
   font-size: 16px;
-  padding: 0 20px;
   color: #444;
   text-align: justify;
 }
@@ -205,6 +204,7 @@ blockquote {
   min-width: 100px;
   max-width: 300px;
   padding: 0 40px;
+  margin-left: 20px;
   box-sizing: border-box;
 }
 
@@ -366,7 +366,7 @@ blockquote {
   }
 
   .docs-doc-content {
-    padding: 0;
+    padding: 0 20px;
     margin: auto;
   }
 
@@ -391,7 +391,8 @@ blockquote {
     height: 100%;
     overflow-y: auto;
     background-color: #FFF;
-    width: 90%;
+    min-width: 40%;
+    max-width: 80%;
     box-shadow: 0px 9px 10px rgba(0,0,0,0.1);
     z-index: 10;
   }
